Update NPM, see if this builds properly in GH
